--- a/FinalTest/2020_first_semester/T1/题面.md
+++ b/FinalTest/2020_first_semester/T1/题面.md
@@ -131,17 +131,17 @@ public:
 int main() {
     int len, m;
     scanf("%d%d", &len, &m);
-    LinkListArray a = LinkListArray(len);
+    LinkListArray ability = LinkListArray(len);
     for (int i = 0, op, s1, s2; i < m; ++i) {
         scanf("%d%d%d", &op, &s1, &s2);
         if (op == 0) {
-            a.insertNumber(s1, s2);
+            ability.insertNumber(s1, s2);
         }
         if (op == 1) {
-            printf("%d\n", a.queryNumber(s1, s2));
+            printf("%d\n", ability.queryNumber(s1, s2));
         }
         if (op == 2) {
-            a.mergeLists(s1, s2);
+            ability.mergeLists(s1, s2);
         }
     }
     return 0;
